tests/negative-fixtures/external_crate_cannot_construct_pipeline_context_with_runtime_aggregates/src/lib.rs
use tracewake_core::actions::PipelineContext;

pub fn construct_pipeline_context_with_runtime_aggregates() {
    let _context = PipelineContext::new();
}
